# lcmcolor

./: .gitignore  app.py  pyproject.toml
static/css/: main.css
templates/: index.html
website/: __init__.py
website/database/: models.py
website/routes/: views.py
website/static/css/: carousel.css  main.css
website/templates/: login.html
