[tool.poetry]
name = "lcmcolor"
version = "0.1.0"
description = "Hairdresser website"
authors = ["Dany"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
folium = "^0.12.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
